--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
